maxReceivedMessageSize, messageEncoding, WSHttpBinding, readerQuotas, maxArrayLength, servicePrincipalName

--- a/IISHost/Web.config
+++ b/IISHost/Web.config
@@ -1,29 +1,34 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0"?>
 <configuration>
-
-	<appSettings>
-		<add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
-	</appSettings>
-	<system.web>
-		<compilation debug="false" targetFramework="4.8.1" />
-		<httpRuntime targetFramework="4.8.1" />
-	</system.web>
 	<system.serviceModel>
+		<bindings>
+			<wsHttpBinding>
+				<binding name="wsHttp" messageEncoding="Text"/>
+			</wsHttpBinding>
+		</bindings>
 		<behaviors>
 			<serviceBehaviors>
-				<behavior>
-					<!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-					<!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-					<serviceDebug includeExceptionDetailInFaults="true" />
+				<behavior name="mexBehaviour">
+					<serviceMetadata httpGetEnabled="true"/>
+					<serviceDebug includeExceptionDetailInFaults="true"/>
 				</behavior>
 			</serviceBehaviors>
 		</behaviors>
-		<protocolMapping>
-			<add binding="wsHttp" scheme="https" />
-		</protocolMapping>
-		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+		<services>
+			<service behaviorConfiguration="mexBehaviour" name="DownloadService.DownloadService">
+				<endpoint address="DownloadService" binding="wsHttpBinding" bindingConfiguration="wsHttp" contract="DownloadService.IDownloadService"/>
+				<host>
+					<baseAddresses>
+						<add baseAddress="http://localhost:8087"/>
+					</baseAddresses>
+				</host>
+			</service>
+		</services>
 	</system.serviceModel>
+	<system.web>
+		<compilation debug="true"/>
+	</system.web>
+
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true" />
 		<!--
@@ -32,5 +37,4 @@
       -->
 		<directoryBrowse enabled="true" />
 	</system.webServer>
-
 </configuration>
