--- a/IISHost/Web.config
+++ b/IISHost/Web.config
@@ -3,7 +3,9 @@
 	<system.serviceModel>
 		<bindings>
 			<wsHttpBinding>
-				<binding name="wsHttp" messageEncoding="Text"/>
+				<binding name="wsHttp" messageEncoding="Text" maxReceivedMessageSize="800000">
+					<readerQuotas maxArrayLength="800000"/>
+				</binding>
 			</wsHttpBinding>
 		</bindings>
 		<behaviors>
